ui: Fix citation graph flickering
* Make vertical scrollbar always show
* INSPIR-2511

--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -139,3 +139,7 @@
 .header-dropdown {
   z-index: $zindex-header + 1 !important;
 }
+
+body {
+  overflow-y: scroll;
+}
